1.21.10 changes, disabled unfinished mean shift algo. experimenting with creative give